Fixed input overflowing bug

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@
   background-color: transparent;
   color: #fff;
   width: 100%;
-  padding: 12px 15px;
+  padding: 12px 40px 12px 20px;
   font-size: 1em;
   border: 1px solid #cfcfcf;
   border-radius: 300px;
@@ -125,7 +125,7 @@
   gap: 7px;
 }
 
-.register .register-link a {
+.register .register-link a {  
   font-weight: 700;
   color: white;
 }
